--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,24 +6,24 @@
     background-color: #676767;
 }
 
+.bg-color-three-reasons {
+    background-color: #fff;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
-
 }
 
 .ui-menu-color-resume {
     background-color: #9b59b6;
-
 }
 
 .ui-menu-color-contact {
     background-color: #3498db;
-
 }
 
 .ui-menu-color-download {
     background-color: #525252;
-
 }
 
 /*------------------------------------Special padding/margins/text */
@@ -44,6 +44,23 @@ h1,h2,h3,h4 {
 
 .inline-block {
     display: inline-block;
+}
+
+.row-table {
+    display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 45px;
 }
 
 /*------------------------------------Header */
@@ -188,4 +205,15 @@ footer {
 
 #footer-details {
     padding: 20px;
+}
+
+/*------------------------------------Three Reasons */
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
 }
